--- a/styles/main.css
+++ b/styles/main.css
@@ -80,18 +80,51 @@ font-size: 1em;
    z-index: 1;
 }
 
+
+
 .work {
   color: white;
 }
 
-.img1{
+.img-grid-1{
   grid-column: 3 / 5 ;
    grid-row: 4 / 6;
-   max-width: 30%;
+   display: grid;
+   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.img-grid-2{
+  grid-column: 5 / 7 ;
+   grid-row: 10 / 12;
+   display: grid;
+   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.img-grid-3{
+  grid-column: 2 / 4 ;
+   grid-row: 14 / 16;
+   display: grid;
+   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+
+.img1{
+  grid-column: 3 / 6;
+   grid-row: 3 / 6;
 align-self: center;
 z-index: 1;
-
 }
+
+.img2{
+  grid-column: 2 / 7;
+   grid-row: 3 / 6;
+align-self: center;
+z-index: 1;
+}
+
 
 .bloc_2{
   background-color: #66c2ff;
@@ -116,7 +149,7 @@ z-index: 1;
 }
 
 .contact {
-color: tan;
+color: white;
 }
 
 .bloc_4{
@@ -132,49 +165,49 @@ color: tan;
 }
 
 .line_1{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 2;
    grid-row: 1 / 20;
 }
 
 .line_2{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 3;
    grid-row: 1 / 20;
 }
 
 .line_3{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 4;
    grid-row: 1 / 20;
 }
 
 .line_4{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 5;
    grid-row: 1 / 20;
 }
 
 .line_5{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 6;
    grid-row: 1 / 20;
 }
 
 .line_6{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 7;
    grid-row: 1 / 20;
 }
 
 .line_7{
-  background-color: tan;
+  background-color: #c69f6c;
   max-width: 2px;
   grid-column: 8;
    grid-row: 1 / 20;
@@ -200,17 +233,17 @@ color: tan;
 
 @media screen and (min-width: 640px) {
     h1 {
-   font-size : 8em;
+   font-size : 6em;
     }
     h2 {
       font-size : 2em;
     }
     .laurie{
-      top: 1em;
+      top: 5em;
       right: 10em;
     }
     .savoia{
-      top: 9em;
+      top: 11em;
       right: 3em;
     }
   }
