--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@ body {
   padding: 0;
 }
 
+/*index*/
+
 h1 {
   color: #0066cc;
   font-family: futura-pt-bold, sans-serif;
@@ -22,22 +24,33 @@ h2 {
   font-style: normal;
 }
 
-.laurie{
-position: absolute;
-top: 0;
-right: 1em;
-margin: 0;
-padding: 0;
-font-size: 1em;
-  z-index:2;
+
+.laurie {
+  grid-column: 5 / 7;
+  grid-row: 1 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 1em;
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+  z-index: 2;
 }
 
-.savoia{
-position: absolute;
-top: 1em;
-right: 1em;
-font-size: 1em;
-  z-index:2;
+.savoia {
+  grid-column: 6 / 8;
+  grid-row: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  font-size: 1em;
+  z-index: 2;
 }
 
 .container {
@@ -46,260 +59,122 @@ font-size: 1em;
   grid-auto-rows: 100px;
 }
 
-.titre{
-  grid-column: 5 / 8 ;
-   grid-row: 1 / 5;
+.titre {
+  grid-column: 5 / 8;
+  grid-row: 1 / 5;
   background-color: white;
   z-index: 1;
 }
 
-.laurie{
-  grid-column: 5 / 7 ;
-   grid-row: 1 / 3;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.savoia{
-  grid-column: 6 / 8 ;
-   grid-row: 3;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-
-}
-
-.bloc_1{
+.bloc_1 {
   background-color: #004d80;
-  grid-column: 2 / 4 ;
-   grid-row: 5 / 7;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   z-index: 1;
+  grid-column: 2 / 4;
+  grid-row: 5 / 7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
-
-
 
 .work {
   color: white;
 }
 
-.img-grid-1{
-  grid-column: 3 / 5 ;
-   grid-row: 4 / 6;
-   display: grid;
-   grid-template-columns: repeat(7, 1fr);
+.img-grid-1 {
+  grid-column: 3 / 5;
+  grid-row: 4 / 6;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
 }
 
-.img-grid-2{
-  grid-column: 5 / 7 ;
-   grid-row: 10 / 12;
-   display: grid;
-   grid-template-columns: repeat(7, 1fr);
+.img-grid-2 {
+  grid-column: 5 / 7;
+  grid-row: 10 / 12;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
 }
 
-.img-grid-3{
-  grid-column: 2 / 4 ;
-   grid-row: 14 / 16;
-   display: grid;
-   grid-template-columns: repeat(7, 1fr);
+.img-grid-3 {
+  grid-column: 2 / 4;
+  grid-row: 14 / 16;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
 }
 
-
-.img1{
+.img1 {
   grid-column: 3 / 6;
-   grid-row: 3 / 6;
-align-self: center;
-z-index: 1;
+  grid-row: 3 / 6;
+  align-self: center;
+  z-index: 1;
 }
 
-.img2{
+.img2 {
   grid-column: 2 / 7;
-   grid-row: 3 / 6;
-align-self: center;
-z-index: 1;
+  grid-row: 3 / 6;
+  align-self: center;
+  z-index: 1;
 }
 
-.footer{
+.footer {
   grid-column: 1 / 9;
-   grid-row: 18 / 19;
-   display: flex;
-   justify-content: center;
+  grid-row: 18 / 19;
+  display: flex;
+  justify-content: center;
   background-color: #e2cfb6;
   margin: 0;
 }
 
-.footer img{
+.footer img {
   max-width: 32px;
   margin: 2em;
 }
 
-.bloc_2{
+.bloc_2 {
   background-color: #66c2ff;
-  grid-column: 6 / 8 ;
-   grid-row: 9 / 11;
-   display: flex;
-   justify-content: center;
-      align-items: center;
+  grid-column: 6 / 8;
+  grid-row: 9 / 11;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .about {
   color: white;
 }
 
-.bloc_3{
-    background-color: #007acc;
-  grid-column: 3 / 5 ;
-   grid-row: 15 / 17;
-   display: flex;
-   justify-content: center;
-      align-items: center;
+.bloc_3 {
+  background-color: #007acc;
+  grid-column: 3 / 5;
+  grid-row: 15 / 17;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact {
-color: white;
+  color: white;
 }
 
-.bloc_4{
-    background-color: #007acc;
-    grid-column: 4;
-     grid-row: 8;
-}
-
-.bloc_5{
-    background-color: #004d80;
-  grid-column: 5;
-   grid-row: 13;
-}
-
-.bloc_6{
-    background-color: #66c2ff;
-  grid-column: 3;
-   grid-row: 11;
-}
-
-.line_1{
-  background-color: #c69f6c;
-  max-width: 2px;
-  grid-column: 2;
-   grid-row: 1 / 19;
-}
-
-.line_2{
-  background-color: #c69f6c;
-  max-width: 2px;
-  grid-column: 3;
-   grid-row: 1 / 19;
-}
-
-.line_3{
-  background-color: #c69f6c;
-  max-width: 2px;
+.bloc_4 {
+  background-color: #007acc;
   grid-column: 4;
-   grid-row: 1 / 19;
+  grid-row: 8;
 }
 
-.line_4{
-  background-color: #c69f6c;
-  max-width: 2px;
+.bloc_5 {
+  background-color: #004d80;
   grid-column: 5;
-   grid-row: 1 / 19;
+  grid-row: 13;
 }
 
-.line_5{
-  background-color: #c69f6c;
-  max-width: 2px;
-  grid-column: 6;
-   grid-row: 1 / 19;
+.bloc_6 {
+  background-color: #66c2ff;
+  grid-column: 3;
+  grid-row: 11;
 }
-
-.line_6{
-  background-color: #c69f6c;
-  max-width: 2px;
-  grid-column: 7;
-   grid-row: 1 / 19;
-}
-
-.line_7{
-  background-color: #c69f6c;
-  max-width: 2px;
-  grid-column: 8;
-   grid-row: 1 / 19;
-}
-
-
-@media screen and (min-width: 320px) {
-    h1 {
-    font-size : 5em;
-    }
-    h2 {
-      font-size : 4em;
-    }
-    .laurie{
-      top: 6em;
-      right: 8em;
-    }
-    .savoia{
-      top: 12em;
-      right: 3em;
-    }
-  }
-
-@media screen and (min-width: 640px) {
-    h1 {
-   font-size : 8em;
-    }
-    h2 {
-      font-size : 4em;
-    }
-    .laurie{
-      top: 3em;
-      right: 10em;
-    }
-    .savoia{
-      top: 11em;
-      right: 3em;
-    }
-  }
-
-@media screen and (min-width: 1028px) {
-    h1 {
-   font-size : 10em;
-    }
-    h2 {
-      font-size : 3em;
-    }
-    .laurie{
-      top: 1em;
-      right: 12em;
-    }
-    .savoia{
-      top: 10em;
-      right: 3em;
-    }
-  }
-
-@media screen and (min-width: 1280px) {
-    h1 {
-   font-size : 10em;
-    }
-    h2 {
-      font-size : 3em;
-    }
-    .laurie{
-      top: 1em;
-      right: 12em;
-    }
-    .savoia{
-      top: 10em;
-      right: 3em;
-    }
-  }
 
 a {
   text-decoration: none;
@@ -308,4 +183,391 @@ a {
 a :hover {
   color: tan;
   transition: 0.3s;
+}
+
+/*works*/
+
+.titre2 {
+  grid-column: 5 / 8;
+  grid-row: 1 / 5;
+  background-color: white;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 10em;
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  font-family: couture-sans, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 9em;
+  color: #004d80;
+}
+
+.fleche {
+  align-self: center;
+}
+
+.fleche img {
+  max-width: 100%;
+}
+
+.fleche_grid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+}
+
+.atelier-s img {
+  max-width: 100%;
+}
+
+.agatha img {
+max-width: 100%;
+}
+
+.linocut img{
+  max-width: 100%;
+}
+
+.flatdesign img{
+  max-width: 100%;
+}
+
+.carson img{
+  max-width: 100%;
+}
+
+.footer_works {
+  grid-column: 1 / 9;
+  grid-row: 37 / 38;
+  display: flex;
+  justify-content: center;
+  background-color: #e2cfb6;
+  margin: 0;
+}
+
+.footer_works img {
+  max-width: 32px;
+  margin: 2em;
+}
+
+
+/*lines*/
+
+.line_1 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 2;
+  grid-row: 1 / 19;
+}
+
+.line_2 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 3;
+  grid-row: 1 / 19;
+}
+
+.line_3 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 4;
+  grid-row: 1 / 19;
+}
+
+.line_4 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 5;
+  grid-row: 1 / 19;
+}
+
+.line_5 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 6;
+  grid-row: 1 / 19;
+}
+
+.line_6 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 7;
+  grid-row: 1 / 19;
+}
+
+.line_7 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 8;
+  grid-row: 1 / 19;
+}
+
+.line_8 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 2;
+  grid-row: 1 / 37;
+}
+
+.line_9 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 3;
+  grid-row: 1 / 37;
+}
+
+.line_10 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 4;
+  grid-row: 1 / 37;
+}
+
+.line_11 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 5;
+  grid-row: 1 / 37;
+}
+
+.line_12 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 6;
+  grid-row: 1 / 37;
+}
+
+.line_13 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 7;
+  grid-row: 1 / 37;
+}
+
+.line_14 {
+  background-color: #c69f6c;
+  max-width: 2px;
+  grid-column: 8;
+  grid-row: 1 / 37;
+}
+
+@media screen and (min-width: 320px) {
+  /*index*/
+  h1 {
+    font-size: 5em;
+  }
+  h2 {
+    font-size: 4em;
+  }
+  .laurie {
+    top: 6em;
+    right: 8em;
+  }
+  .savoia {
+    top: 12em;
+    right: 3em;
+  }
+  /*works*/
+  h3 {
+    font-size: 4em;
+  }
+  .titre2 {
+    top: 0;
+    right: 5em;
+  }
+  .fleche {
+    grid-column: 2 / 8;
+    grid-row: 3 / 7;
+  }
+  .fleche_grid {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+  .atelier-s {
+    grid-column: 3 / 5;
+    grid-row: 4 / 6;
+  }
+  .agatha {
+    grid-column: 4 / 7;
+    grid-row: 7 / 9;
+  }
+  .linocut {
+    grid-column: 2 / 5;
+    grid-row: 10 / 20;
+  }
+  .flatdesign {
+    grid-column: 6 / 8;
+    grid-row: 12 / 21;
+  }
+  .carson{
+    grid-column: 3 / 6;
+    grid-row: 16 / 20;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  /*index*/
+  h1 {
+    font-size: 8em;
+  }
+  h2 {
+    font-size: 4em;
+  }
+  .laurie {
+    top: 3em;
+    right: 10em;
+  }
+  .savoia {
+    top: 11em;
+    right: 3em;
+  }
+  /*works*/
+  h3 {
+    font-size: 6em;
+  }
+  .titre2 {
+    top: 0;
+    right: 5em;
+  }
+  .fleche {
+    grid-column: 3 / 7;
+    grid-row: 3 / 7;
+  }
+  .fleche_grid {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+  }
+  .atelier-s {
+    grid-column: 3 / 5;
+    grid-row: 5 / 8;
+  }
+  .agatha {
+    grid-column: 4 / 7;
+    grid-row: 9 / 12;
+  }
+  .linocut {
+    grid-column: 2 / 5;
+    grid-row: 14 / 24;
+  }
+  .flatdesign {
+    grid-column: 6 / 8;
+    grid-row: 18 / 25;
+  }
+  .carson{
+    grid-column: 3 / 6;
+    grid-row: 23 / 27;
+  }
+}
+
+@media screen and (min-width: 1028px) {
+  /*index*/
+  h1 {
+    font-size: 10em;
+  }
+  h2 {
+    font-size: em;
+  }
+  .laurie {
+    top: 1em;
+    right: 12em;
+  }
+  .savoia {
+    top: 10em;
+    right: 3em;
+  }
+  /*works*/
+  h3 {
+    font-size: 9em;
+  }
+  .fleche {
+    grid-column: 4 / 6;
+    grid-row: 3 / 7;
+  }
+  .fleche_grid {
+    grid-column: 2 / 3;
+    grid-row: 2 / 5;
+  }
+  .titre2 {
+    top: 0;
+    right: 10em;
+  }
+  .atelier-s {
+    grid-column: 3 / 5;
+    grid-row: 6 / 9;
+  }
+  .agatha {
+    grid-column: 4 / 7;
+    grid-row: 12 / 15;
+  }
+  .linocut {
+    grid-column: 2 / 5;
+    grid-row: 17 / 27;
+  }
+  .flatdesign {
+    grid-column: 6 / 8;
+    grid-row: 23 / 30;
+  }
+  .carson{
+    grid-column: 3 / 6;
+    grid-row: 29 / 34;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  /*index*/
+  h1 {
+    font-size: 10em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  .laurie {
+    top: 1em;
+    right: 12em;
+  }
+  .savoia {
+    top: 10em;
+    right: 3em;
+  }
+  /*works*/
+  h3 {
+    font-size: 9em;
+  }
+  .titre2 {
+    top: 0;
+    right: 10em;
+  }
+  .fleche {
+    grid-column: 4 / 6;
+    grid-row: 4 / 6;
+  }
+  .fleche_grid {
+    grid-column: 2 / 3;
+    grid-row: 2 / 5;
+  }
+  .atelier-s {
+    grid-column: 3 / 5;
+    grid-row: 6 / 9;
+  }
+  .agatha {
+    grid-column: 4 / 7;
+    grid-row: 12 / 15;
+  }
+  .linocut {
+    grid-column: 2 / 5;
+    grid-row: 18 / 28;
+  }
+  .flatdesign {
+    grid-column: 6 / 8;
+    grid-row: 24 / 31;
+  }
+  .carson{
+    grid-column: 3 / 6;
+    grid-row: 31 / 36;
+  }
 }
