--- a/styles/main.css
+++ b/styles/main.css
@@ -200,10 +200,9 @@ a :hover {
 }
 
 h3 {
-  font-family: couture-sans, sans-serif;
+  font-family: futura-pt-bold, sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 9em;
   color: #004d80;
 }
 
@@ -242,8 +241,6 @@ max-width: 100%;
 }
 
 .footer_works {
-  grid-column: 1 / 9;
-  grid-row: 37 / 38;
   display: flex;
   justify-content: center;
   background-color: #e2cfb6;
@@ -310,50 +307,36 @@ max-width: 100%;
 .line_8 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 2;
-  grid-row: 1 / 37;
 }
 
 .line_9 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 3;
-  grid-row: 1 / 37;
 }
 
 .line_10 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 4;
-  grid-row: 1 / 37;
 }
 
 .line_11 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 5;
-  grid-row: 1 / 37;
 }
 
 .line_12 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 6;
-  grid-row: 1 / 37;
 }
 
 .line_13 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 7;
-  grid-row: 1 / 37;
 }
 
 .line_14 {
   background-color: #c69f6c;
   max-width: 2px;
-  grid-column: 8;
-  grid-row: 1 / 37;
 }
 
 @media screen and (min-width: 320px) {
@@ -378,7 +361,7 @@ max-width: 100%;
   }
   .titre2 {
     top: 0;
-    right: 5em;
+    right: 3em;
   }
   .fleche {
     grid-column: 2 / 8;
@@ -408,6 +391,45 @@ max-width: 100%;
     grid-column: 3 / 6;
     grid-row: 16 / 20;
   }
+  /*lines*/
+    .line_8 {
+      grid-column: 2;
+      grid-row: 1 / 19;
+    }
+
+    .line_9 {
+  grid-column: 3;
+      grid-row: 1 / 19;
+    }
+
+    .line_10 {
+      grid-column: 4;
+      grid-row: 1 / 19;
+    }
+
+    .line_11 {
+      grid-column: 5;
+      grid-row: 1 / 19;
+    }
+
+    .line_12 {
+      grid-column: 6;
+      grid-row: 1 / 19;
+    }
+
+    .line_13 {
+      grid-column: 7;
+      grid-row: 1 / 19;
+    }
+
+    .line_14 {
+      grid-column: 8;
+      grid-row: 1 / 19;
+    }
+    .footer_works {
+      grid-column: 1 / 9;
+      grid-row: 19 / 20;
+      }
 }
 
 @media screen and (min-width: 640px) {
@@ -432,7 +454,7 @@ max-width: 100%;
   }
   .titre2 {
     top: 0;
-    right: 5em;
+    right: 4em;
   }
   .fleche {
     grid-column: 3 / 7;
@@ -462,6 +484,45 @@ max-width: 100%;
     grid-column: 3 / 6;
     grid-row: 23 / 27;
   }
+  /*lines*/
+    .line_8 {
+      grid-column: 2;
+      grid-row: 1 / 27;
+    }
+
+    .line_9 {
+  grid-column: 3;
+      grid-row: 1 / 27;
+    }
+
+    .line_10 {
+      grid-column: 4;
+      grid-row: 1 / 27;
+    }
+
+    .line_11 {
+      grid-column: 5;
+      grid-row: 1 / 27;
+    }
+
+    .line_12 {
+      grid-column: 6;
+      grid-row: 1 / 27;
+    }
+
+    .line_13 {
+      grid-column: 7;
+      grid-row: 1 / 27;
+    }
+
+    .line_14 {
+      grid-column: 8;
+      grid-row: 1 / 27;
+    }
+    .footer_works {
+      grid-column: 1 / 9;
+      grid-row: 27 / 28;
+      }
 }
 
 @media screen and (min-width: 1028px) {
@@ -494,7 +555,7 @@ max-width: 100%;
   }
   .titre2 {
     top: 0;
-    right: 10em;
+    right: 8em;
   }
   .atelier-s {
     grid-column: 3 / 5;
@@ -516,6 +577,45 @@ max-width: 100%;
     grid-column: 3 / 6;
     grid-row: 29 / 34;
   }
+  /*lines*/
+    .line_8 {
+      grid-column: 2;
+      grid-row: 1 / 34;
+    }
+
+    .line_9 {
+  grid-column: 3;
+      grid-row: 1 / 34;
+    }
+
+    .line_10 {
+      grid-column: 4;
+      grid-row: 1 / 34;
+    }
+
+    .line_11 {
+      grid-column: 5;
+      grid-row: 1 / 34;
+    }
+
+    .line_12 {
+      grid-column: 6;
+      grid-row: 1 / 34;
+    }
+
+    .line_13 {
+      grid-column: 7;
+      grid-row: 1 / 34;
+    }
+
+    .line_14 {
+      grid-column: 8;
+      grid-row: 1 / 34;
+    }
+    .footer_works {
+      grid-column: 1 / 9;
+      grid-row: 34 / 35;
+      }
 }
 
 @media screen and (min-width: 1280px) {
@@ -540,7 +640,7 @@ max-width: 100%;
   }
   .titre2 {
     top: 0;
-    right: 10em;
+    right: 8em;
   }
   .fleche {
     grid-column: 4 / 6;
@@ -570,4 +670,43 @@ max-width: 100%;
     grid-column: 3 / 6;
     grid-row: 31 / 36;
   }
+/*lines*/
+  .line_8 {
+    grid-column: 2;
+    grid-row: 1 / 37;
+  }
+
+  .line_9 {
+grid-column: 3;
+    grid-row: 1 / 37;
+  }
+
+  .line_10 {
+    grid-column: 4;
+    grid-row: 1 / 37;
+  }
+
+  .line_11 {
+    grid-column: 5;
+    grid-row: 1 / 37;
+  }
+
+  .line_12 {
+    grid-column: 6;
+    grid-row: 1 / 37;
+  }
+
+  .line_13 {
+    grid-column: 7;
+    grid-row: 1 / 37;
+  }
+
+  .line_14 {
+    grid-column: 8;
+    grid-row: 1 / 37;
+  }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 37 / 38;
+    }
 }
