--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,6 @@ h2 {
   font-style: normal;
 }
 
-
 .laurie {
   grid-column: 5 / 7;
   grid-row: 1 / 3;
@@ -225,19 +224,37 @@ h3 {
 }
 
 .agatha img {
-max-width: 100%;
-}
-
-.linocut img{
   max-width: 100%;
 }
 
-.flatdesign img{
+.linocut img {
   max-width: 100%;
 }
 
-.carson img{
+.flatdesign img {
   max-width: 100%;
+}
+
+.carson img {
+  max-width: 100%;
+}
+
+.img-grid-4 {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.img-grid-5 {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.img-grid-6 {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
 }
 
 .footer_works {
@@ -251,7 +268,6 @@ max-width: 100%;
   max-width: 32px;
   margin: 2em;
 }
-
 
 /*lines*/
 
@@ -387,49 +403,55 @@ max-width: 100%;
     grid-column: 6 / 8;
     grid-row: 12 / 21;
   }
-  .carson{
+  .carson {
     grid-column: 3 / 6;
     grid-row: 16 / 20;
   }
+  .img-grid-4 {
+    grid-column: 2 / 4;
+    grid-row: 4;
+  }
+  .img-grid-5 {
+    grid-column: 6 / 8;
+    grid-row: 6 / 8;
+  }
+  .img-grid-6 {
+    grid-column: 2 / 4;
+    grid-row: 15 / 17;
+  }
   /*lines*/
-    .line_8 {
-      grid-column: 2;
-      grid-row: 1 / 19;
-    }
-
-    .line_9 {
-  grid-column: 3;
-      grid-row: 1 / 19;
-    }
-
-    .line_10 {
-      grid-column: 4;
-      grid-row: 1 / 19;
-    }
-
-    .line_11 {
-      grid-column: 5;
-      grid-row: 1 / 19;
-    }
-
-    .line_12 {
-      grid-column: 6;
-      grid-row: 1 / 19;
-    }
-
-    .line_13 {
-      grid-column: 7;
-      grid-row: 1 / 19;
-    }
-
-    .line_14 {
-      grid-column: 8;
-      grid-row: 1 / 19;
-    }
-    .footer_works {
-      grid-column: 1 / 9;
-      grid-row: 19 / 20;
-      }
+  .line_8 {
+    grid-column: 2;
+    grid-row: 1 / 19;
+  }
+  .line_9 {
+    grid-column: 3;
+    grid-row: 1 / 19;
+  }
+  .line_10 {
+    grid-column: 4;
+    grid-row: 1 / 19;
+  }
+  .line_11 {
+    grid-column: 5;
+    grid-row: 1 / 19;
+  }
+  .line_12 {
+    grid-column: 6;
+    grid-row: 1 / 19;
+  }
+  .line_13 {
+    grid-column: 7;
+    grid-row: 1 / 19;
+  }
+  .line_14 {
+    grid-column: 8;
+    grid-row: 1 / 19;
+  }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 19 / 20;
+  }
 }
 
 @media screen and (min-width: 640px) {
@@ -480,49 +502,55 @@ max-width: 100%;
     grid-column: 6 / 8;
     grid-row: 18 / 25;
   }
-  .carson{
+  .carson {
     grid-column: 3 / 6;
     grid-row: 23 / 27;
   }
+  .img-grid-4 {
+    grid-column: 2 / 4;
+    grid-row: 6;
+  }
+  .img-grid-5 {
+    grid-column: 6 / 8;
+    grid-row: 8 / 10;
+  }
+  .img-grid-6 {
+    grid-column: 2 / 4;
+    grid-row: 22 / 24;
+  }
   /*lines*/
-    .line_8 {
-      grid-column: 2;
-      grid-row: 1 / 27;
-    }
-
-    .line_9 {
-  grid-column: 3;
-      grid-row: 1 / 27;
-    }
-
-    .line_10 {
-      grid-column: 4;
-      grid-row: 1 / 27;
-    }
-
-    .line_11 {
-      grid-column: 5;
-      grid-row: 1 / 27;
-    }
-
-    .line_12 {
-      grid-column: 6;
-      grid-row: 1 / 27;
-    }
-
-    .line_13 {
-      grid-column: 7;
-      grid-row: 1 / 27;
-    }
-
-    .line_14 {
-      grid-column: 8;
-      grid-row: 1 / 27;
-    }
-    .footer_works {
-      grid-column: 1 / 9;
-      grid-row: 27 / 28;
-      }
+  .line_8 {
+    grid-column: 2;
+    grid-row: 1 / 27;
+  }
+  .line_9 {
+    grid-column: 3;
+    grid-row: 1 / 27;
+  }
+  .line_10 {
+    grid-column: 4;
+    grid-row: 1 / 27;
+  }
+  .line_11 {
+    grid-column: 5;
+    grid-row: 1 / 27;
+  }
+  .line_12 {
+    grid-column: 6;
+    grid-row: 1 / 27;
+  }
+  .line_13 {
+    grid-column: 7;
+    grid-row: 1 / 27;
+  }
+  .line_14 {
+    grid-column: 8;
+    grid-row: 1 / 27;
+  }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 27 / 28;
+  }
 }
 
 @media screen and (min-width: 1028px) {
@@ -573,49 +601,55 @@ max-width: 100%;
     grid-column: 6 / 8;
     grid-row: 23 / 30;
   }
-  .carson{
+  .carson {
     grid-column: 3 / 6;
     grid-row: 29 / 34;
   }
+  .img-grid-4 {
+    grid-column: 2 / 4;
+    grid-row: 7;
+  }
+  .img-grid-5 {
+    grid-column: 6 / 8;
+    grid-row: 11 / 13;
+  }
+  .img-grid-6 {
+    grid-column: 2 / 4;
+    grid-row: 28 / 30;
+  }
   /*lines*/
-    .line_8 {
-      grid-column: 2;
-      grid-row: 1 / 34;
-    }
-
-    .line_9 {
-  grid-column: 3;
-      grid-row: 1 / 34;
-    }
-
-    .line_10 {
-      grid-column: 4;
-      grid-row: 1 / 34;
-    }
-
-    .line_11 {
-      grid-column: 5;
-      grid-row: 1 / 34;
-    }
-
-    .line_12 {
-      grid-column: 6;
-      grid-row: 1 / 34;
-    }
-
-    .line_13 {
-      grid-column: 7;
-      grid-row: 1 / 34;
-    }
-
-    .line_14 {
-      grid-column: 8;
-      grid-row: 1 / 34;
-    }
-    .footer_works {
-      grid-column: 1 / 9;
-      grid-row: 34 / 35;
-      }
+  .line_8 {
+    grid-column: 2;
+    grid-row: 1 / 34;
+  }
+  .line_9 {
+    grid-column: 3;
+    grid-row: 1 / 34;
+  }
+  .line_10 {
+    grid-column: 4;
+    grid-row: 1 / 34;
+  }
+  .line_11 {
+    grid-column: 5;
+    grid-row: 1 / 34;
+  }
+  .line_12 {
+    grid-column: 6;
+    grid-row: 1 / 34;
+  }
+  .line_13 {
+    grid-column: 7;
+    grid-row: 1 / 34;
+  }
+  .line_14 {
+    grid-column: 8;
+    grid-row: 1 / 34;
+  }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 34 / 35;
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -666,41 +700,47 @@ max-width: 100%;
     grid-column: 6 / 8;
     grid-row: 24 / 31;
   }
-  .carson{
+  .carson {
     grid-column: 3 / 6;
     grid-row: 31 / 36;
   }
-/*lines*/
+  .img-grid-4 {
+    grid-column: 2 / 4;
+    grid-row: 7 / 9;
+  }
+  .img-grid-5 {
+    grid-column: 6 / 8;
+    grid-row: 11 / 13;
+  }
+  .img-grid-6 {
+    grid-column: 2 / 4;
+    grid-row: 30 / 32;
+  }
+  /*lines*/
   .line_8 {
     grid-column: 2;
     grid-row: 1 / 37;
   }
-
   .line_9 {
-grid-column: 3;
+    grid-column: 3;
     grid-row: 1 / 37;
   }
-
   .line_10 {
     grid-column: 4;
     grid-row: 1 / 37;
   }
-
   .line_11 {
     grid-column: 5;
     grid-row: 1 / 37;
   }
-
   .line_12 {
     grid-column: 6;
     grid-row: 1 / 37;
   }
-
   .line_13 {
     grid-column: 7;
     grid-row: 1 / 37;
   }
-
   .line_14 {
     grid-column: 8;
     grid-row: 1 / 37;
@@ -708,5 +748,5 @@ grid-column: 3;
   .footer_works {
     grid-column: 1 / 9;
     grid-row: 37 / 38;
-    }
+  }
 }
