--- a/styles/main.css
+++ b/styles/main.css
@@ -388,24 +388,24 @@ h3 {
     grid-row: 1 / 3;
   }
   .atelier-s {
-    grid-column: 3 / 6;
-    grid-row: 4 / 6;
+    grid-column: 3 / 7;
+    grid-row: 4;
   }
   .agatha {
-    grid-column: 3 / 7;
-    grid-row: 8 / 10;
+    grid-column: 2 / 7;
+    grid-row: 9;
   }
   .linocut {
-    grid-column: 3 / 7;
-    grid-row: 12 / 18;
+    grid-column: 3 / 8;
+    grid-row: 13;
   }
   .flatdesign {
     grid-column: 3 / 7;
-    grid-row: 19 / 30;
+    grid-row: 21;
   }
   .carson {
-    grid-column: 3 / 7;
-    grid-row: 25 / 28;
+    grid-column: 2 / 7;
+    grid-row: 27;
   }
   .img-grid-4 {
     grid-column: 2 / 4;
@@ -413,44 +413,44 @@ h3 {
   }
   .img-grid-5 {
     grid-column: 6 / 8;
-    grid-row: 7 / 9;
+    grid-row: 8 / 10;
   }
   .img-grid-6 {
     grid-column: 2 / 4;
-    grid-row: 25 / 27;
+    grid-row: 20 / 22;
   }
   /*lines*/
   .line_8 {
     grid-column: 2;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_9 {
     grid-column: 3;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_10 {
     grid-column: 4;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_11 {
     grid-column: 5;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_12 {
     grid-column: 6;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_13 {
     grid-column: 7;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .line_14 {
     grid-column: 8;
-    grid-row: 1 / 29;
+    grid-row: 1 / 31;
   }
   .footer_works {
     grid-column: 1 / 9;
-    grid-row: 29 / 30;
+    grid-row: 31 / 32;
   }
 }
 
