--- a/styles/main.css
+++ b/styles/main.css
@@ -487,69 +487,69 @@ h3 {
     grid-row: 1 / 4;
   }
   .atelier-s {
-    grid-column: 3 / 6;
-    grid-row: 5 / 9;
+    grid-column: 3 / 7;
+    grid-row: 5;
   }
   .agatha {
-    grid-column: 3 / 7;
-    grid-row: 11 / 16;
+    grid-column: 2 / 7;
+    grid-row: 13;
   }
   .linocut {
     grid-column: 3 / 7;
-    grid-row: 17 / 27;
+    grid-row: 20;
   }
   .flatdesign {
-    grid-column: 3 / 7;
-    grid-row: 27 / 35;
+    grid-column: 3 / 8;
+    grid-row: 30;
   }
   .carson {
-    grid-column: 3 / 7;
-    grid-row: 35 / 40;
+    grid-column: 2 / 7;
+    grid-row: 42;
   }
   .img-grid-4 {
     grid-column: 2 / 4;
-    grid-row: 6 / 8;
+    grid-row: 7;
   }
   .img-grid-5 {
     grid-column: 6 / 8;
-    grid-row: 10 / 12;
+    grid-row: 12 / 14;
   }
   .img-grid-6 {
     grid-column: 6 / 8;
-    grid-row: 36 / 38;
+    grid-row: 41 / 43;
   }
   /*lines*/
   .line_8 {
     grid-column: 2;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_9 {
     grid-column: 3;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_10 {
     grid-column: 4;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_11 {
     grid-column: 5;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_12 {
     grid-column: 6;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_13 {
     grid-column: 7;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .line_14 {
     grid-column: 8;
-    grid-row: 1 / 41;
+    grid-row: 1 / 48;
   }
   .footer_works {
     grid-column: 1 / 9;
-    grid-row: 41 / 42;
+    grid-row: 48 / 49;
   }
 }
 
