--- a/styles/main.css
+++ b/styles/main.css
@@ -269,6 +269,52 @@ h3 {
   margin: 2em;
 }
 
+/*atelier*/
+
+.img-atelier-1 img {
+  width: 100%;
+}
+
+.img-atelier-2 img {
+  width: 100%;
+}
+
+.img-atelier-3 img {
+  width: 100%;
+}
+
+.text-1{
+  font-family: couture-sans, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2em;
+  color: #936c39;
+}
+
+.text-1 p{
+  background-color: white;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+.img-grid-7 {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.footer_atelier {
+  display: flex;
+  justify-content: center;
+  background-color: #e2cfb6;
+  margin: 0;
+}
+
+.footer_atelier img {
+  max-width: 32px;
+  margin: 2em;
+}
+
 /*lines*/
 
 .line_1 {
@@ -354,6 +400,40 @@ h3 {
   background-color: #c69f6c;
   max-width: 2px;
 }
+.line_15 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_16 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_17 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_18 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_19 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_20 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
+
+.line_21 {
+  background-color: #c69f6c;
+  max-width: 2px;
+}
 
 @media screen and (min-width: 320px) {
   /*index*/
@@ -419,6 +499,40 @@ h3 {
     grid-column: 2 / 4;
     grid-row: 20 / 22;
   }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 31 / 32;
+  }
+  /*atelier*/
+  .img-atelier-1 {
+    grid-column: 2 / 5;
+    grid-row: 4;
+  }
+
+  .img-atelier-2 {
+    grid-column: 3 / 5;
+    grid-row: 8;
+  }
+
+  .img-atelier-3 {
+    grid-column: 6 / 8;
+    grid-row: 10;
+  }
+
+  .text-1{
+    grid-column: 6 / 8;
+    grid-row: 5;
+  }
+
+  .img-grid-7 {
+    grid-column: 2 / 4;
+    grid-row: 7 / 9;
+  }
+
+  .footer_atelier {
+    grid-column: 1 / 9;
+    grid-row: 13 / 14;
+  }
   /*lines*/
   .line_8 {
     grid-column: 2;
@@ -448,9 +562,33 @@ h3 {
     grid-column: 8;
     grid-row: 1 / 31;
   }
-  .footer_works {
-    grid-column: 1 / 9;
-    grid-row: 31 / 32;
+  .line_15 {
+    grid-column: 2;
+    grid-row: 1 / 13;
+  }
+  .line_16 {
+    grid-column: 3;
+    grid-row: 1 / 13;
+  }
+  .line_17 {
+    grid-column: 4;
+    grid-row: 1 / 13;
+  }
+  .line_18 {
+    grid-column: 5;
+    grid-row: 1 / 13;
+  }
+  .line_19 {
+    grid-column: 6;
+    grid-row: 1 / 13;
+  }
+  .line_20 {
+    grid-column: 7;
+    grid-row: 1 / 13;
+  }
+  .line_21 {
+    grid-column: 8;
+    grid-row: 1 / 13;
   }
 }
 
@@ -518,6 +656,40 @@ h3 {
     grid-column: 6 / 8;
     grid-row: 39 / 41;
   }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 47 / 48;
+  }
+  /*atelier*/
+  .img-atelier-1 {
+    grid-column: 2 / 5;
+    grid-row: 5;
+  }
+
+  .img-atelier-2 {
+    grid-column: 3 / 5;
+    grid-row: 11;
+  }
+
+  .img-atelier-3 {
+    grid-column: 6 / 8;
+    grid-row: 11;
+  }
+
+  .text-1{
+    grid-column: 6 / 8;
+    grid-row: 6;
+  }
+
+  .img-grid-7 {
+    grid-column: 2 / 4;
+    grid-row: 10 / 12;
+  }
+
+  .footer_atelier {
+    grid-column: 1 / 9;
+    grid-row: 15 / 16;
+  }
   /*lines*/
   .line_8 {
     grid-column: 2;
@@ -547,9 +719,33 @@ h3 {
     grid-column: 8;
     grid-row: 1 / 48;
   }
-  .footer_works {
-    grid-column: 1 / 9;
-    grid-row: 47 / 48;
+  .line_15 {
+    grid-column: 2;
+    grid-row: 1 / 16;
+  }
+  .line_16 {
+    grid-column: 3;
+    grid-row: 1 / 16;
+  }
+  .line_17 {
+    grid-column: 4;
+    grid-row: 1 / 16;
+  }
+  .line_18 {
+    grid-column: 5;
+    grid-row: 1 / 16;
+  }
+  .line_19 {
+    grid-column: 6;
+    grid-row: 1 / 16;
+  }
+  .line_20 {
+    grid-column: 7;
+    grid-row: 1 / 16;
+  }
+  .line_21 {
+    grid-column: 8;
+    grid-row: 1 / 16;
   }
 }
 
@@ -617,6 +813,40 @@ h3 {
     grid-column: 2 / 4;
     grid-row: 28 / 30;
   }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 34 / 35;
+  }
+  /*atelier*/
+  .img-atelier-1 {
+    grid-column: 2 / 5;
+    grid-row: 6;
+  }
+
+  .img-atelier-2 {
+    grid-column: 3 / 5;
+    grid-row: 13;
+  }
+
+  .img-atelier-3 {
+    grid-column: 6 / 8;
+    grid-row: 13;
+  }
+
+  .text-1{
+    grid-column: 6 / 8;
+    grid-row: 7;
+  }
+
+  .img-grid-7 {
+    grid-column: 2 / 4;
+    grid-row: 12 / 14;
+  }
+
+  .footer_atelier {
+    grid-column: 1 / 9;
+    grid-row: 18 / 19;
+  }
   /*lines*/
   .line_8 {
     grid-column: 2;
@@ -646,10 +876,35 @@ h3 {
     grid-column: 8;
     grid-row: 1 / 34;
   }
-  .footer_works {
-    grid-column: 1 / 9;
-    grid-row: 34 / 35;
+  .line_15 {
+    grid-column: 2;
+    grid-row: 1 / 19;
   }
+  .line_16 {
+    grid-column: 3;
+    grid-row: 1 / 19;
+  }
+  .line_17 {
+    grid-column: 4;
+    grid-row: 1 / 19;
+  }
+  .line_18 {
+    grid-column: 5;
+    grid-row: 1 / 19;
+  }
+  .line_19 {
+    grid-column: 6;
+    grid-row: 1 / 19;
+  }
+  .line_20 {
+    grid-column: 7;
+    grid-row: 1 / 19;
+  }
+  .line_21 {
+    grid-column: 8;
+    grid-row: 1 / 19;
+  }
+
 }
 
 @media screen and (min-width: 1280px) {
@@ -716,6 +971,40 @@ h3 {
     grid-column: 2 / 4;
     grid-row: 30 / 32;
   }
+  .footer_works {
+    grid-column: 1 / 9;
+    grid-row: 37 / 38;
+  }
+  /*atelier*/
+  .img-atelier-1 {
+    grid-column: 2 / 5;
+    grid-row: 6;
+  }
+
+  .img-atelier-2 {
+    grid-column: 3 / 5;
+    grid-row: 15;
+  }
+
+  .img-atelier-3 {
+    grid-column: 6 / 8;
+    grid-row: 15;
+  }
+
+  .text-1{
+    grid-column: 6 / 8;
+    grid-row: 7;
+  }
+
+  .img-grid-7 {
+    grid-column: 2 / 4;
+    grid-row: 14 / 16;
+  }
+
+  .footer_atelier {
+    grid-column: 1 / 9;
+    grid-row: 21 / 22;
+  }
   /*lines*/
   .line_8 {
     grid-column: 2;
@@ -745,8 +1034,32 @@ h3 {
     grid-column: 8;
     grid-row: 1 / 37;
   }
-  .footer_works {
-    grid-column: 1 / 9;
-    grid-row: 37 / 38;
+  .line_15 {
+    grid-column: 2;
+    grid-row: 1 / 21;
+  }
+  .line_16 {
+    grid-column: 3;
+    grid-row: 1 / 21;
+  }
+  .line_17 {
+    grid-column: 4;
+    grid-row: 1 / 21;
+  }
+  .line_18 {
+    grid-column: 5;
+    grid-row: 1 / 21;
+  }
+  .line_19 {
+    grid-column: 6;
+    grid-row: 1 / 21;
+  }
+  .line_20 {
+    grid-column: 7;
+    grid-row: 1 / 21;
+  }
+  .line_21 {
+    grid-column: 8;
+    grid-row: 1 / 21;
   }
 }
